Correction du texte popup + correction detail du css associé + hotfix bouton download version mobile

--- a/css/smartphone.css
+++ b/css/smartphone.css
@@ -420,6 +420,14 @@
         border-radius: 5px;
     }
 
+    .popup {
+        width: 300px;
+    }
+
+    .popup p {
+        font-size: small;
+    }
+
     /* FOOTER */
 
     footer p {
